--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,67 +10,62 @@
 [buildout]
 extends = http://dist.plone.org/release/4.3.9/versions.cfg
 versions = versions
-develop = .
+
+extensions = mr.developer
+auto-checkout = *
+
+zeoserver-address = 8100
+client1-address = 8080
+user = admin:adminsecret
+
+develop =
+    .
+    src/bika.lims
 
 parts =
     lxml
     omelette
     test
     robot
+    zeoserver
+    client1
 
 eggs =
+    bika.lims
     als.lims
     i18ndude
     lxml
 
-[i18ndude]
-unzip = true
-recipe = zc.recipe.egg
-eggs = i18ndude
+[sources]
+bika.lims = git git@github.com:rockfruit/bika.lims branch=client/als-master
 
-[update_translations]
-recipe = collective.recipe.template
-output = ${buildout:directory}/bin/update_translations
-input = inline:
-    #!/bin/bash
-    BLDDIR=${buildout:directory}
-    I18NDUDE=$BLDDIR/bin/i18ndude
-    BASE_PATH=$BLDDIR
-    LOCALES=$BASE_PATH/als/lims/locales
-    cd $LOCALES
+[zeoserver]
+recipe = plone.recipe.zeoserver
+zeo-address = ${buildout:zeoserver-address}
+var = var
+blob-storage = var/blobstorage
+zserver-threads = 2
+zeo-log     = var/zeoserver.log
+pid-file    = var/zeoserver.pid
+socket-name = var/zeo.zdsock
 
-    ### Transifex - pull everything
-    #tx pull -a -f
-
-    DOMAIN="bika"
-    ### Flush the english (transifex source language) po files
-    ### If we don't do this, new $DOMAIN-manual.pot translations won't be synced.
-    > en/LC_MESSAGES/$DOMAIN.po
-    ### Re-scan source for new strings
-    $I18NDUDE rebuild-pot --pot $DOMAIN-tmp.pot --exclude "build" --create $DOMAIN $BASE_PATH
-    $I18NDUDE trmerge $DOMAIN-tmp.pot $DOMAIN-manual.pot > $DOMAIN.pot
-    rm $DOMAIN-tmp.pot
-    $I18NDUDE sync --pot $DOMAIN.pot */LC_MESSAGES/$DOMAIN.po
-
-    DOMAIN="plone"
-    PLONE_POT=$BLDDIR/parts/omelette/plone/app/locales/locales/plone.pot
-    > en/LC_MESSAGES/$DOMAIN.po
-    ### Re-scan source for new strings
-    $I18NDUDE rebuild-pot --pot $DOMAIN-tmp.pot --create $DOMAIN $BASE_PATH/bika/lims/profiles
-    $I18NDUDE filter $DOMAIN-tmp.pot $PLONE_POT > $DOMAIN.pot
-    rm $DOMAIN-tmp.pot
-    $I18NDUDE trmerge $DOMAIN.pot $DOMAIN-manual.pot > $DOMAIN-tmp.pot
-    mv $DOMAIN-tmp.pot $DOMAIN.pot
-    $I18NDUDE sync --pot $DOMAIN.pot */LC_MESSAGES/$DOMAIN.po
-
-    find . -name "*.mo" -delete
-    for po in `find . -name "*.po"`; do
-        msgfmt -o `dirname $po`/`basename $po .po`.mo $po;
-    done
-
-    ### Transifex
-    #tx push -s -t
-mode = 755
+[client1]
+recipe = plone.recipe.zope2instance
+var = var
+blob-storage = var/blobstorage
+zeo-address = ${buildout:zeoserver-address}
+http-address = ${buildout:client1-address}
+user = ${buildout:user}
+resources = ${buildout:directory}/resources
+locales = ${buildout:directory}/locales
+eggs = ${buildout:eggs}
+zeo-client = true
+shared-blob = on
+http-fast-listen = on
+event-log = var/client1-event.log
+z2-log    = var/client1-Z2.log
+pid-file  = var/client1.pid
+lock-file = var/client1.lock
 
 [lxml]
 recipe = z3c.recipe.staticlxml
